fixing bug in storing a user information in the database

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="form">
 		<form name ="new_user_form" id ="new_user_form" action="/signup" method="POST"> 
-			First name: <input type="text" name="user[firstaName]" /><br />
+			First name: <input type="text" name="user[firstName]" /><br />
 			Last name: <input type="text" name="user[lastName]" /><br/>
 			Nickame: <input type="text" name="user[nickName]" /><br />
 			Email Address: <input type="text" name="user[emailAddress]" /><br/>
